<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="playMusicViewModel"
            type="com.dht.music.ui.playmusic.PlayMusicViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:orientation="vertical"
        tools:context="com.dht.music.ui.playmusic.PlayMusicFragment">

        <com.dht.music.view.TopTitleView
            android:id="@+id/play_top_title_view"
            android:layout_width="match_parent"
            android:layout_height="60dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/orange" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/orange" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/colorWhite"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/play_type"
                style="@style/TitleBar"
                android:drawableTop="@mipmap/icon_lemon_original_64"
                android:text="@string/play_type" />

            <TextView
                android:id="@+id/previous"
                style="@style/musicBottomTitle"
                android:drawableTop="@mipmap/icon_mushroom_original_64"
                android:text="@string/previous" />

            <TextView
                android:id="@+id/play"
                style="@style/musicBottomTitle"
                android:drawableTop="@mipmap/icon_peach_original_64"
                android:text="@string/playing" />

            <TextView
                android:id="@+id/next"
                style="@style/musicBottomTitle"
                android:drawableTop="@mipmap/icon_pear_original_64"
                android:text="@string/next" />

            <TextView
                android:id="@+id/play_list"
                style="@style/musicBottomTitle"
                android:drawableTop="@mipmap/icon_pipa_original_64"
                android:text="@string/play_list" />
        </LinearLayout>
    </LinearLayout>
</layout>